bluejay-parser/tests/snapshots/schema_definition_integration_test__error@referenced_directive_does_not_exist.graphql.snap
---
source: bluejay-parser/tests/schema_definition_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/schema_definition/error/referenced_directive_does_not_exist.graphql
---
Error: Referenced directive `@foo` does not exist
   ╭─[ referenced_directive_does_not_exist.graphql:1:12 ]
   │
 1 │ type Query @foo {
   │            ──┬─  
   │              ╰─── No definition for referenced directive
───╯
